--- a/src/application/view/MeatProducts.fxml
+++ b/src/application/view/MeatProducts.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="515.0" maxWidth="675.0" prefHeight="426.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.view.MeatProductsController">
+<AnchorPane maxHeight="515.0" maxWidth="675.0" prefHeight="426.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.MeatProductsController">
    <children>
       <AnchorPane layoutY="27.0" prefHeight="399.0" prefWidth="200.0">
          <children>
