--- a/src/application/view/FoodOverview.fxml
+++ b/src/application/view/FoodOverview.fxml
@@ -1,29 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="515.0" maxWidth="675.0" prefHeight="426.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.FoodController">
-   <children>
-      <Button id="oilButton" layoutX="224.0" layoutY="225.0" mnemonicParsing="false" onAction="#goToOilProducts" prefHeight="200.0" prefWidth="225.0" text="Tłuszcze" />
-      <Button id="vfButton" layoutY="225.0" mnemonicParsing="false" onAction="#goToVegetablesAndFruits" prefHeight="200.0" prefWidth="225.0" text="Warzywa, owoce, przetwory" />
-      <Button id="sugarButton" layoutX="449.0" layoutY="225.0" mnemonicParsing="false" onAction="#goToSugarProducts" prefHeight="200.0" prefWidth="225.0" text="Cukier i słodycze, używki" />
-      <Button id="grainButton" layoutY="27.0" mnemonicParsing="false" onAction="#goToGrainProducts" prefHeight="200.0" prefWidth="225.0" text="Produkty zbożowe" />
-      <Button id="milkButton" layoutX="224.0" layoutY="27.0" mnemonicParsing="false" onAction="#goToMilkProducts" prefHeight="200.0" prefWidth="225.0" text="Mleko i produkty mleczne" />
-      <Button id="meatButton" layoutX="449.0" layoutY="27.0" mnemonicParsing="false" onAction="#goToMeatProducts" prefHeight="200.0" prefWidth="225.0" text="Mięso, wędliny, ryby, jaja" />
-      <MenuBar layoutX="-1.0" layoutY="2.0" prefHeight="25.0" prefWidth="675.0">
-        <menus>
-          <Menu mnemonicParsing="false" text="Plik">
-            <items>
-              <MenuItem mnemonicParsing="false" onAction="#handleOpen" text="Otwórz" />
-                  <MenuItem mnemonicParsing="false" onAction="#handleSave" text="Zapisz" />
-                  <MenuItem mnemonicParsing="false" onAction="#handleSaveAs" text="Zapisz jako" />
-                  <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Wyjście" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-   </children>
+<AnchorPane maxHeight="515.0" maxWidth="675.0" prefHeight="426.0"
+	prefWidth="675.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="application.controller.FoodController">
+	<children>
+		<Button layoutX="224.0" layoutY="225.0" mnemonicParsing="false"
+			onAction="#goToOilProducts" prefHeight="200.0" prefWidth="225.0"
+			text="Tłuszcze" textAlignment="CENTER">
+			<font>
+				<Font name="System Bold" size="20.0" />
+			</font>
+		</Button>
+		<Button layoutY="225.0" mnemonicParsing="false"
+			onAction="#goToVegetablesAndFruits" prefHeight="200.0" prefWidth="225.0"
+			text="Warzywa, owoce, przetwory" textAlignment="CENTER" wrapText="true">
+			<font>
+				<Font name="System Bold" size="20.0" />
+			</font>
+		</Button>
+		<Button layoutX="449.0" layoutY="225.0" mnemonicParsing="false"
+			onAction="#goToSugarProducts" prefHeight="200.0" prefWidth="225.0"
+			text="Cukier i słodycze, używki" textAlignment="CENTER" wrapText="true">
+			<font>
+				<Font name="System Bold" size="20.0" />
+			</font>
+		</Button>
+		<Button layoutY="27.0" mnemonicParsing="false" onAction="#goToGrainProducts"
+			prefHeight="200.0" prefWidth="225.0" text="Produkty zbożowe"
+			textAlignment="CENTER">
+			<font>
+				<Font name="System Bold" size="20.0" />
+			</font>
+		</Button>
+		<Button layoutX="224.0" layoutY="27.0" mnemonicParsing="false"
+			onAction="#goToMilkProducts" prefHeight="200.0" prefWidth="225.0"
+			text="Mleko i produkty mleczne" textAlignment="CENTER" wrapText="true">
+			<font>
+				<Font name="System Bold" size="20.0" />
+			</font>
+		</Button>
+		<Button layoutX="449.0" layoutY="27.0" mnemonicParsing="false"
+			onAction="#goToMeatProducts" prefHeight="200.0" prefWidth="225.0"
+			text="Mięso, wędliny, ryby, jaja" textAlignment="CENTER" wrapText="true">
+			<font>
+				<Font name="System Bold" size="20.0" />
+			</font>
+		</Button>
+		<MenuBar layoutX="-1.0" layoutY="2.0" prefHeight="25.0"
+			prefWidth="675.0">
+			<menus>
+				<Menu mnemonicParsing="false" text="Plik">
+					<items>
+						<MenuItem mnemonicParsing="false" onAction="#handleOpen"
+							text="Otwórz" />
+						<MenuItem mnemonicParsing="false" onAction="#handleSave"
+							text="Zapisz" />
+						<MenuItem mnemonicParsing="false" onAction="#handleSaveAs"
+							text="Zapisz jako" />
+						<MenuItem mnemonicParsing="false" onAction="#handleExit"
+							text="Wyjście" />
+					</items>
+				</Menu>
+			</menus>
+		</MenuBar>
+	</children>
 </AnchorPane>
