--- a/src/application/view/FoodEditDialog.fxml
+++ b/src/application/view/FoodEditDialog.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -23,14 +24,38 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Nazwa" />
-            <Label text="Producent" GridPane.rowIndex="1" />
-            <Label text="Waga" GridPane.rowIndex="2" />
-            <Label text="Objętość" GridPane.rowIndex="3" />
-            <Label text="Ilość sztuk" GridPane.rowIndex="4" />
-            <Label text="Cena" GridPane.rowIndex="5" />
-            <Label text="Data zakupu" GridPane.rowIndex="6" />
-            <Label text="Data ważności" GridPane.rowIndex="7" />
+            <Label text="Nazwa">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+            <Label text="Producent" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+            <Label text="Waga" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+            <Label text="Objętość" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+            <Label text="Ilość sztuk" GridPane.rowIndex="4">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+            <Label text="Cena" GridPane.rowIndex="5">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+            <Label text="Data zakupu" GridPane.rowIndex="6">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+            <Label text="Data ważności" GridPane.rowIndex="7">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
             <TextField fx:id="nameField" GridPane.columnIndex="1" />
             <TextField fx:id="producerField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="weightField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
